# ic-websocket-cdk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  tests.yml
scripts/: download-pocket-ic.sh  test.sh  test_canister.sh
src/ic-websocket-cdk/: Cargo.toml  service.example.did  service_messages.did  ws_types.did
src/ic-websocket-cdk/src/: errors.rs  lib.rs  logger.rs  state.rs  timers.rs  types.rs  utils.rs
src/ic-websocket-cdk/src/tests/: common.rs  mod.rs  unit_tests.rs
src/ic-websocket-cdk/src/tests/integration_tests/: a_ws_open.rs  b_ws_message.rs  c_ws_get_messages.rs  d_ws_close.rs  e_send.rs  e_ws_send.rs  f_close.rs  f_messages_acknowledgement.rs  g_messages_acknowledgement.rs  g_multiple_gateways.rs  h_multiple_gateways.rs  mod.rs
src/ic-websocket-cdk/src/tests/integration_tests/utils/: actor.rs  certification.rs  clients.rs  constants.rs  messages.rs  mod.rs  test_env.rs  wasm.rs
src/ic-websocket-cdk/src/tests/unit_tests/: mod.rs  utils.rs
src/integration-tests/: Cargo.toml
src/integration-tests/scripts/: build-test-canister.sh  download-pocket-ic.sh
src/integration-tests/src/: a_ws_open.rs  actor.rs  b_ws_message.rs  c_ws_get_messages.rs  certification.rs  d_ws_close.rs  e_ws_send.rs  f_messages_acknowledgement.rs  lib.rs  messages.rs  utils.rs  wasm.rs  ws_open.rs
src/integration-tests/src/tests/: a_ws_open.rs  b_ws_message.rs  c_ws_get_messages.rs  d_ws_close.rs  e_ws_send.rs  f_messages_acknowledgement.rs  mod.rs
src/integration-tests/src/utils/: actor.rs  clients.rs  mod.rs  test_env.rs
src/test_canister/: Cargo.toml  test_canister.did
src/test_canister/src/: canister.rs  lib.rs
tests/: Cargo.toml  dfx.json  jest.config.ts  jest.setup.ts  package-lock.json  package.json  test_canister.did  tsconfig.json
tests/integration/: canister.test.ts
tests/integration/utils/: actors.ts  api.ts  client.ts  crypto.ts  helpers.ts  identity.ts  idl.ts  messages.ts  random.ts
tests/src/: canister.rs  lib.rs
