[workspace]
members = [
  "src/ic-websocket-cdk",
  "src/integration-tests",
  "src/integration-tests/test_canister",
  "tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/omnia-network/ic-websocket-cdk-rs"
rust-version = "1.70.0"
description = "IC Websocket CDK Rust workspace"
license = "MIT"

[workspace.dependencies]
ic-websocket-cdk = { path = "src/ic-websocket-cdk" }

candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
serde = "1.0.176"
serde_cbor = "0.11.2"
rand = "0.8.5"

[profile.canister-release]
inherits = "release"
debug = false
panic = "abort"
lto = true
opt-level = 'z'
