[workspace]
members = ["src/ic-websocket-cdk", "src/test_canister"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/omnia-network/ic-websocket-cdk-rs"
rust-version = "1.79"
description = "IC Websocket CDK Rust workspace"
license = "MIT"

[workspace.dependencies]
ic-websocket-cdk = { path = "src/ic-websocket-cdk" }

candid = "0.10"
ic-cdk = "0.16"
serde = "1.0"
serde_cbor = "0.11"

[profile.canister-release]
inherits = "release"
debug = false
panic = "abort"
lto = true
opt-level = 'z'
