[package]
name = "ic-websocket-cdk"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "IC Websocket Canister Development Kit"
homepage = "https://docs.rs/ic-websocket-cdk"
documentation = "https://docs.rs/ic-websocket-cdk"
readme = "../../README.md"
exclude = ["**/*.did"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = "0.6.0"
serde = { workspace = true }
serde_cbor = { workspace = true }
ic-certified-map = "0.4.0"
base64 = "0.21.7"
sha2 = "0.10.8"
serde_bytes = "0.11.12"

[dev-dependencies]
ic-agent = "0.33"
proptest = "1.4"
rand = "0.8"
ring = "0.16"
lazy_static = "1.4"
pocket-ic = "2.2"
ic-certificate-verification = "2.4"
ic-certification = "2.4"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
