[package]
name = "ic-websocket-cdk"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "IC Websocket Canister Development Kit"
homepage = "https://docs.rs/ic-websocket-cdk"
documentation = "https://docs.rs/ic-websocket-cdk"
readme = "../../README.md"
exclude = ["**/*.did"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = "0.9"
serde = { workspace = true }
serde_cbor = { workspace = true }
ic-certification = "2.5"
base64 = "0.22"
sha2 = "0.10"
serde_bytes = "0.11"

[dev-dependencies]
ic-agent = "0.36"
proptest = "1.5"
rand = "0.8"
ring = "0.17"
lazy_static = "1.5"
pocket-ic = "3.1"
ic-certificate-verification = "2.4"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
